diss: temporal coherence stuff

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -712,6 +712,15 @@
   address = {New York}
 }
 
+@BOOK{2007:goldstein:wooff::bayeslinear,
+  title = {Bayes Linear Statistics: Theory and Methods},
+  publisher = {Wiley},
+  year = {2007},
+  author = {Michael Goldstein and David Wooff},
+  address = {Chichester}
+}
+
+
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
     title     = "Desirability",
