--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -560,3 +560,20 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
     url = {http://www.R-project.org/},
   }
 
+@article{1985:goldstein::temporal,
+  title={Temporal coherence},
+  author={Goldstein, Michael},
+  journal={Bayesian Statistics},
+  volume={2},
+  pages={231--248},
+  year={1985}
+}
+
+@inproceedings{2013:troffaes:goldstein,
+    Author = {Matthias Troffaes and Michael Goldstein},
+    Booktitle = {ISIPTA '13: Proceedings of the Eighth International Symposium on Imprecise Probabilities: Theories and Applications},
+    Editor = {Fabio Cozman and Thierry Denoeux and Sebastian Destercke and Teddy Seidenfeld},
+    pages = {***--***},
+    Title = {A Note on the Temporal Sure Preference Principle and the Updating of Lower Previsions},
+    Year = {2013}}
+
