--- a/concluding.tex
+++ b/concluding.tex
@@ -214,15 +214,20 @@ However, it seems equally reasonable to choose $\yzu(\nzl) > \yzu(\nzu)$,
 by the considerations described*** at the beginning of Section~\ref{sec:othershapes},
 involving a thought experiment, i.e., doing a pre-posterior analysis:
 %***anteater****
-If we designate bounds for $\yn$ constant in $\nn$,
-where the corresponding posterior parameter set $\PN$
-expresses what we want to learn from certain hypothetical data,
+If we designate bounds for $\yn$ constant in $\nn$ and a range of $\nn$ values,
+%where the corresponding posterior parameter set $\PN$
+expressing what we want to learn from certain hypothetical data,
 the corresponding $\PZ$ derived by doing a `backwards update' has,
 due to the update mechanism \eqref{eq:canonicalupdate},
 a wider range for high values of $\nz$, and a narrower range for lower $\nz$ values.%
-\footnote{For this model, the pre-posterior bounds, along with the hypothetical data, have to be elicited}
+\footnote{For this model, to elicit the pre-posterior bounds, certain hypothetical data have to be chosen.
+Section~\ref{sec:othershapes} touches only very briefly on these hypothetical data
+(that are a part of the model parameters) and how to choose it,
+and there is ample opportunity for research here.
+One could also modify the model by allowing to choose
+the `pre-posterior $\PN$' more freely ($\yn$ not constant in $\nn$).}
 For an actual sample size smaller than the hypothetical one,
-also this shape is more `tolerant' as the retangular shape.
+also this shape is more `tolerant' as the rectangular shape.
 
 The resulting shapes are similar to shapes that would result
 if we required, for information on the main prior parameter $\yz$ symmetrical around $0$,
