diss: related concepts: belief functions, huber-strassen

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -720,6 +720,13 @@
   address = {Chichester}
 }
 
+@book{1998:augustin,
+    Address = {G\"{o}ttingen},
+    Author = {Augustin, T.},
+    Publisher = {Vandenhoeck and Ruprecht},
+    Title = {{Optimale Tests bei Intervallwahrscheinlichkeit}},
+    Year = 1998}
+
 
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
