diss: short NPI

--- a/bib/itip-refs.bib
+++ b/bib/itip-refs.bib
@@ -727,6 +727,52 @@
     Title = {{Optimale Tests bei Intervallwahrscheinlichkeit}},
     Year = 1998}
 
+@ARTICLE{2004:augustin,
+  author = {Augustin, T. and Coolen, F.},
+  title = {Nonparametric predictive inference and interval probability},
+  journal = {Journal of Statistical Planning and Inference},
+  year = {2004},
+  volume = {124},
+  pages = {251--272}
+}
+
+@article{2006b:Coolen,
+    Author = {Coolen, F.},
+    Journal = {Journal of Logic, Language and Information},
+    Pages = {21--47},
+    Title = {On nonparametric predictive inference and objective {B}ayesianism},
+    Volume = {15},
+    Year = {2006}}
+
+@article{1968:hill,
+  author = "Hill, B.",
+  title = "Posterior distribution of percentiles: {B}ayes' theorem for sampling from a population",
+  journal = "Journal of the American Statistical Association",
+  volume = "63",
+  pages = "677 - 691",
+  year = "1968",
+}
+
+@incollection{1988:hill,
+    Author = {Hill, B.},
+    Booktitle = {Bayesian Statistics 3},
+    Editor = {D. Lindley and J. Bernardo and M. DeGroot and A. Smith},
+    Pages = {211--241},
+    Publisher = {Oxford University Press},
+    Title = {De {F}inetti's theorem, induction, and $A_{(n)}$ or {B}ayesian nonparametric predictive inference (with discussion)},
+    Year = {1988}}
+
+@article{2005:lawless,
+    Author = {Lawless, J. and Fredette, M.},
+    Journal = {Biometrika},
+    Pages = {529--542},
+    Title = {Frequentist prediction intervals and predictive distributions},
+    Volume = {92},
+    Year = {2005}}
+
+
+
+
 
 @incollection{itip-desirable,
     author    = "Erik Quaeghebeur",
