--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -577,3 +577,12 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
     Title = {A Note on the Temporal Sure Preference Principle and the Updating of Lower Previsions},
     Year = {2013}}
 
+@article{2000:dawid,
+  title={Causal inference without counterfactuals (with discussion)},
+  author={Dawid, A.P.},
+  journal={Journal of the American Statistical Association},
+  volume={95},
+  pages={407--424},
+  year={2000}
+}
+
