--- a/intro.tex
+++ b/intro.tex
@@ -47,6 +47,7 @@ Sec.~\ref{sec:ip-intro} was newly written for this thesis,
 except Sec.~\ref{sec:imprecisebayes}, which is based on \textcite[\S 4.2]{itip-statinf},
 and Section~\ref{sec:updating}, which is based on parts of \textcite[\S 4.4]{itip-statinf}.
 %where the latter was mainly written by Thomas Augustin.
+Also, Section~\ref{sec:ip-related} uses parts of \textcite[\S 5.2]{itip-statinf} and \textcite[\S 6.1]{itip-statinf}.
 
 Sec.~\ref{sec:motivation} was devised for this thesis,
 under use of \textcite[\S 2.3]{itip-statinf}
