--- a/isipta11.tex
+++ b/isipta11.tex
@@ -697,7 +697,7 @@ and has small yet fascinating differences with the models in
 Sections~\ref{sec:ibbm-walley} and \ref{sec:othershapes}. We present a basic
 version of the model in Section~\ref{wi-basic}, followed by an
 extended version in Section~\ref{wi-ext}. Opportunities to
-generalize the model are mentioned in
+generalise the model are mentioned in
 Section~\ref{wi-prop}.
 %In line with the other sections of this paper,
 %we focus on the event that, following $s$ successes in $n$
@@ -747,7 +747,8 @@ and $\Pl^u$ and $\Pu^u$ on the prior set with $\nz = 1$ and $\yz \in [0,1]$.
 There are other methods for imprecise statistical inference that
 lead to these same lower and upper probabilities, including
 Nonparametric Predictive Inference for Bernoulli quantities
-\parencite{1998:coolen}\footnote{See also \url{www.npi-statistics.com}.},
+\parencite{1998:coolen}%
+\footnote{See the short description in Section~\ref{sec:ip-related}, and for more resources also \url{www.npi-statistics.com}.},
 where the $s^i$ and $n^i$ would only be included if they were actual
 observations, for example resulting from a second data set that one
 may wish to include in the `informative' model but not in the `uninformative' model.
