diss: small stuff in cha 2

--- a/bib/other-refs.bib
+++ b/bib/other-refs.bib
@@ -586,3 +586,12 @@ url = "http://www.sciencedirect.com/science/article/pii/S0888613X12000862",
   year={2000}
 }
 
+@incollection{1988:pericchi:nazareth,
+  title={On being imprecise at the higher levels of a hierarchical linear model},
+  author={Pericchi, L. and Nazaret, W.},
+  editor = {Bernardo, J. and DeGroot, M. and Lindley, D. and Smith, A.},
+  booktitle={Bayesian Statistics 3},
+  pages={361--375},
+  year={1988}
+}
+
